Remove outdated notebooks and streamline Module 3 content, enhancing focus on code review and test generation automation. This update includes the deletion of the introductory session notebook and the module overview, while retaining essential sections and solutions for improved clarity and usability.

--- a/01-course/module-03-applications/3.2-code-review-automation.ipynb
+++ b/01-course/module-03-applications/3.2-code-review-automation.ipynb
@@ -4,16 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Section 3.2: Code Review Automation\n",
+    "# Section 3.2: Automate Code Review with Prompt Templates\n",
     "\n",
     "| **Aspect** | **Details** |\n",
     "|-------------|-------------|\n",
-    "| **Goal** | Build production-ready code review templates that combine multiple prompt engineering tactics |\n",
+    "| **Goal** | Build a reusable code review template that catches security, performance, and quality issues |\n",
     "| **Time** | ~40 minutes |\n",
-    "| **Prerequisites** | Section 1 complete, setup_utils.py loaded |\n",
-    "| **What You'll Learn** | Strategic tactic combinations, template parameterization, comprehensive code reviews |\n",
-    "| **Next Steps** | Continue to Section 3.3: Test Case Automation |\n",
-    "---\n"
+    "| **Prerequisites** | Section 3.1 complete, `setup_utils.py` loaded |\n",
+    "| **What You'll Build** | Multi-dimensional review template with severity classification |\n",
+    "| **Next Steps** | Activity 3.2 → Section 3.3 (Test Generation) |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "You mastered individual tactics in Module 2. Now you'll **combine them** into production templates that automate SDLC workflows. Start by building a comprehensive code review system that replaces ad-hoc reviews with structured, consistent feedback."
    ]
   },
   {
@@ -57,7 +60,7 @@
     "\n",
     "You'll create a **code review prompt template** that automatically checks code like an experienced engineer would. The prompt template will assist to find bugs, security issues, and quality problems, and provide clear suggestions on how to fix them.\n",
     "\n",
-    "**Time Required:** ~40 minutes (includes learning, examples, and hands-on activity)\n",
+    "**Time Required:** ~40 minutes (learning + examples + activity)\n",
     "</div>\n",
     "\n",
     "Layering tactics is the key to getting that level of rigor. Each block in the template leans on a different Module 2 technique so the model moves from context → reasoning → decision without dropping details. We'll call out those tactical touchpoints as you work through the section.\n",
@@ -391,41 +394,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## 🏋️ Hands-On Practice: Activity 3.2\n",
-    "\n",
-    "<div style=\"background:#dcfce7; border-left:4px solid #22c55e; padding:16px; border-radius:6px; margin:20px 0; color:#000000;\">\n",
-    "<strong style=\"color:#166534;\">📝 Activity Time: Work in Your Own File!</strong><br><br>\n",
-    "\n",
-    "Instead of working in this notebook, you'll complete this activity in a dedicated markdown file. This gives you:\n",
-    "<ul>\n",
-    "<li>✅ A clean workspace for your solutions</li>\n",
-    "<li>✅ Easy file sharing with instructors/peers</li>\n",
-    "<li>✅ Better version control (commit your progress!)</li>\n",
-    "<li>✅ Reusable templates for your projects</li>\n",
-    "</ul>\n",
-    "</div>\n",
-    "\n",
-    "### 🎯 What You'll Build\n",
-    "\n",
-    "A production-ready code review template by researching AWS patterns and applying them to comprehensive code review.\n",
-    "\n",
-    "**Time Required:** 30-40 minutes\n",
-    "\n",
-    "### 📝 Instructions\n",
-    "\n",
-    "1. **Open the activity file:** [`activities/activity-3.2-code-review.md`](./activities/activity-3.2-code-review.md)\n",
-    "2. **Follow the 3-step process:**\n",
-    "   - **Step 1 (10-15 min):** Research AWS code review patterns\n",
-    "   - **Step 2 (10-15 min):** Design your template (answer planning questions)\n",
-    "   - **Step 3 (15-20 min):** Build your template between the markers\n",
-    "3. **Test your template** using the helper function below\n",
-    "4. **Compare with solution** when done: [`solutions/activity-3.2-code-review-solution.md`](./solutions/activity-3.2-code-review-solution.md)\n",
-    "\n",
-    "### 🧪 Testing Your Activity\n",
-    "\n",
-    "Use the helper function below to test your template directly from the activity file!"
-   ]
+   "source": "## 🏋️ Activity 3.2: Build Your Code Review Template\n\n<div style=\"background:#dcfce7; border-left:4px solid #22c55e; padding:16px; border-radius:6px; margin:20px 0; color:#000000;\">\n<strong style=\"color:#166534;\">🎯 Your Task:</strong> Create a production-ready code review template using AWS-inspired patterns.<br><br>\n<strong>Time:</strong> 30-40 minutes\n</div>\n\n### 📝 How to Complete This Activity\n\n1. Open **[`activities/activity-3.2-code-review.md`](./activities/activity-3.2-code-review.md)**\n2. Complete the template between the `<!-- TEMPLATE START -->` and `<!-- TEMPLATE END -->` markers\n3. Return here and run the test cell below\n4. Compare with **[solution](./solutions/activity-3.2-code-review-solution.md)** when done\n\n> **💡 What You'll Build:** A multi-dimensional review template that catches security, performance, and quality issues with structured, actionable feedback."
   },
   {
    "cell_type": "markdown",
@@ -547,27 +516,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ✅ Section 2 Complete!\n",
+    "## ✅ Section 3.2 Complete!\n",
     "\n",
     "<div style=\"margin-top:16px; padding:14px; background:#dcfce7; border-left:4px solid #22c55e; border-radius:6px; color:#065f46;\">\n",
-    "<strong>🎉 Nice work!</strong> You just wrapped up the Code Review Automation section.\n",
+    "<strong>🎉 Nice work!</strong> You've completed the Code Review Automation section.\n",
     "</div>\n",
     "\n",
-    "**Key takeaways**\n",
+    "**Key takeaways:**\n",
     "- Combined Module 2 tactics into a reusable review template\n",
-    "- Practiced comprehensive code reviews after researching template patterns\n",
-    "- Built confidence using the activity workflow and helper tests\n",
+    "- Built multi-dimensional reviews covering security, performance, and quality\n",
+    "- Learned to use parameterized templates with `{{variables}}`\n",
     "\n",
-    "**Next up**\n",
-    "1. Open [`3.3-test-generation-automation.ipynb`](./3.3-test-generation-automation.ipynb)\n",
-    "2. Use the same setup to explore LLM-powered test generation\n",
-    "3. Complete Activity 3.3 in its markdown workspace\n",
+    "### ⏭️ Next: Section 3.3 - Test Generation Automation\n",
     "\n",
+    "**[🚀 Open Section 3.3 now](./3.3-test-generation-automation.ipynb)** to learn how to generate comprehensive test specifications from requirements.\n",
     "\n",
-    "<div style=\"margin-top:12px; padding:24px; background:linear-gradient(120deg,#1d4ed8 0%,#6366f1 50%,#22d3ee 100%); border-radius:14px; color:#f8fafc; text-align:center; box-shadow:0 10px 24px rgba(79,70,229,0.25);\">\n",
-    "  <strong style=\"display:block; font-size:1.15em; margin-bottom:6px;\">☕ Need a pause?</strong>\n",
-    "  <span style=\"font-size:0.98em; line-height:1.6;\">Give your brain a reset—bookmark the next section, stretch for a minute, and come back with fresh eyes.</span>\n",
-    "</div>\n"
+    "> You're halfway through the core material! Keep the momentum going."
    ]
   }
  ],
