--- a/01-course/module-03-applications/3.3-test-generation-automation.ipynb
+++ b/01-course/module-03-applications/3.3-test-generation-automation.ipynb
@@ -4,16 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Section 3.3: Test Generation Automation\n",
+    "# Section 3.3: Automate Test Generation with Prompt Templates\n",
     "\n",
     "| **Aspect** | **Details** |\n",
     "|-------------|-------------|\n",
-    "| **Goal** | Build production-ready test generation templates that surface coverage gaps and ambiguities |\n",
-    "| **Time** | ~35 minutes |\n",
-    "| **Prerequisites** | Sections 1-2 complete, setup_utils.py loaded |\n",
-    "| **What You'll Learn** | Coverage gap analysis, ambiguity detection, reusable test specifications |\n",
-    "| **Next Steps** | Continue to Section 3.4: Code Review Automation |\n",
-    "---\n"
+    "| **Goal** | Build a template that transforms vague requirements into comprehensive test specifications |\n",
+    "| **Time** | ~40 minutes |\n",
+    "| **Prerequisites** | Sections 3.1-3.2 complete, `setup_utils.py` loaded |\n",
+    "| **What You'll Build** | Requirements analyzer with ambiguity detection and edge case generation |\n",
+    "| **Next Steps** | Activity 3.3 → **Core module complete!** (Optional: Section 3.4 Advanced) |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "You built a code review template in Section 3.2. Now tackle the **testing phase**: create a prompt that detects ambiguities, generates edge cases, and separates unit from integration tests—turning \"build a discount system\" into actionable test plans."
    ]
   },
   {
@@ -91,7 +94,7 @@
    "source": [
     "#### 🧩 Pattern Overview: AWS-Inspired Flow\n",
     "\n",
-    "The AWS `generate-tests` command pattern distills test planning into four focused moves. Keeping each move small reduces cognitive load while preserving coverage rigor:\n",
+    "The **[AWS `generate-tests` command pattern](https://github.com/aws-samples/anthropic-on-aws/blob/main/advanced-claude-code-patterns/commands/generate-tests.md)** distills test planning into four focused moves. Keeping each move small reduces cognitive load while preserving coverage rigor:\n",
     "\n",
     "1. **Command Summary** – clarify the mission, the success signals, and who consumes the plan.\n",
     "2. **System Inputs** – bundle the minimal context (domain, requirements, existing tests) so the model scans once.\n",
@@ -99,7 +102,7 @@
     "4. **Output Contract** – lock the deliverables into a predictable structure for downstream tooling.\n",
     "\n",
     "<div style=\"background:#dcfce7; border-left:4px solid #22c55e; padding:16px; border-radius:6px; margin:20px 0; color:#000000;\">\n",
-    "<strong style=\"color:#166534;\">AWS-Inspired Callouts</strong><br><br>\n",
+    "<strong style=\"color:#166534;\">AWS-Inspired Callouts</strong><br>\n",
     "<ul style=\"margin:12px 0 0 18px;\">\n",
     "  <li>Keep the command summary to three bullets so the north star stays visible.</li>\n",
     "  <li>Group all inputs together to avoid jumping between sections.</li>\n",
@@ -350,35 +353,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🏋️ Hands-On Practice: Activity 3.3\n",
+    "## 🏋️ Activity 3.3: Build Your Test Generation Template\n",
     "\n",
-    "<div style=\"background:#dcfce7; border-left:4px solid #22c55e; padding:16px; border-radius:6px; margin:20px 0; color:#000000;\">\n",
-    "<strong style=\"color:#166534;\">📝 Activity Time: Work in Your Own File!</strong><br><br>\n",
-    "\n",
-    "Complete this activity in a dedicated markdown file for a clean, reusable workspace!\n",
+    "<div style=\"background:#dcfce7; border-left:4px solid #22c55e; padding:16px; border-radius:6px; margin:20px 0; color:#065f46;\">\n",
+    "<strong style=\"color:#166534;\">🎯 Your Task:</strong> Create a test generation template for a shopping cart discount system with intentionally vague requirements.<br><br>\n",
+    "<strong>Time:</strong> 30-40 minutes\n",
     "</div>\n",
     "\n",
-    "### 🎯 What You'll Build\n",
+    "### 📝 How to Complete This Activity\n",
     "\n",
-    "A production-ready test generation template for a shopping cart discount system with intentionally vague requirements.\n",
+    "1. Open **[`activities/activity-3.3-test-generation.md`](./activities/activity-3.3-test-generation.md)**\n",
+    "2. Complete the template between the `<!-- TEMPLATE START -->` and `<!-- TEMPLATE END -->` markers\n",
+    "3. Return here and run the test cell below\n",
+    "4. Compare with **[solution](./solutions/activity-3.3-test-generation-solution.md)** when done\n",
     "\n",
-    "**Time Required:** 30-40 minutes\n",
-    "\n",
-    "**The Challenge:** These requirements are intentionally vague! Your template should identify ambiguities, generate edge cases, and produce comprehensive test specifications.\n",
-    "\n",
-    "### 📝 Instructions\n",
-    "\n",
-    "1. **Open the activity file:** [`activities/activity-3.3-test-generation.md`](./activities/activity-3.3-test-generation.md)\n",
-    "2. **Follow the 3-step process:**\n",
-    "   - **Step 1 (10-15 min):** Research AWS test generation patterns\n",
-    "   - **Step 2 (10-15 min):** Design your template (answer planning questions)\n",
-    "   - **Step 3 (15-20 min):** Build your template between the markers\n",
-    "3. **Test your template** using the helper function below\n",
-    "4. **Compare with solution** when done: [`solutions/activity-3.3-test-generation-solution.md`](./solutions/activity-3.3-test-generation-solution.md)\n",
-    "\n",
-    "### 🧪 Testing Your Activity\n",
-    "\n",
-    "Use the helper function below to test your template directly from the activity file!\n"
+    "> **💡 The Challenge:** The requirements are intentionally vague! Your template should identify ambiguities, generate edge cases, and produce comprehensive test specifications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"margin-top:16px; color:#991b1b; padding:12px; background:#fee2e2; border-radius:6px; border-left:4px solid #ef4444;\">\n",
+    "<style>\n",
+    "code {\n",
+    "  font-family: Consolas,\"courier new\";\n",
+    "  color:rgb(238, 13, 13);\n",
+    "  background-color: #f1f1f1;\n",
+    "  padding: 2px;\n",
+    "  font-size: 110%;\n",
+    "}\n",
+    "</style>\n",
+    "<strong>⚠️ COMPLETE THE ACTIVITY FIRST:</strong><br>\n",
+    "Before running the cells below, you must:\n",
+    "<ol style=\"margin: 8px 0 0 0;\">\n",
+    "<li>Open <code>activities/activity-3.3-test-generation.md</code></li>\n",
+    "<li>Replace all <code>TODO</code> comments in the template (between <code>&lt;!-- TEMPLATE START --&gt;</code> and <code>&lt;!-- TEMPLATE END --&gt;</code>)</li>\n",
+    "<li>Save the file</li>\n",
+    "<li>Return here to test your template</li>\n",
+    "</ol>\n",
+    "</div>"
    ]
   },
   {
@@ -453,7 +467,7 @@
     "## ✅ Section 3 Complete!\n",
     "\n",
     "<div style=\"margin-top:16px; padding:14px; background:#dcfce7; border-left:4px solid #22c55e; border-radius:6px; color:#065f46;\">\n",
-    "<strong>🎉 Outstanding work!</strong> You just wrapped up the Test Generation Automation section and completed Module 3.\n",
+    "<strong>🎉 Outstanding work!</strong> You just wrapped up the Test Generation Automation section and completed the core material for Module 3!\n",
     "</div>\n",
     "\n",
     "**Key takeaways**\n",
@@ -462,14 +476,129 @@
     "- Reinforced the Module 2 tactic stack inside a real SDLC workflow\n",
     "\n",
     "**Where to go next**\n",
-    "1. Revisit your activity files to iterate on the templates with real project requirements\n",
-    "2. Continue to Module 4 (if available) or integrate these prompts into your team's QA workflow\n",
-    "3. Share what you built—pair with teammates or incorporate into CI to keep momentum going\n",
+    "1. Complete the \"Track Your Progress\" section below to assess your skills\n",
+    "2. Optional: Continue to **Section 3.4: LLM-as-Judge** for advanced evaluation techniques\n",
+    "3. Revisit your activity files to iterate on the templates with real project requirements\n",
+    "4. Share what you built pair with teammates or incorporate into CI to keep momentum going\n",
     "\n",
     "<div style=\"margin-top:12px; padding:24px; background:linear-gradient(120deg,#1d4ed8 0%,#6366f1 50%,#22d3ee 100%); border-radius:14px; color:#f8fafc; text-align:center; box-shadow:0 10px 24px rgba(79,70,229,0.25);\">\n",
-    "  <strong style=\"display:block; font-size:1.15em; margin-bottom:6px;\">☕ Time for a breather?</strong>\n",
-    "  <span style=\"font-size:0.98em; line-height:1.6;\">Celebrate the milestone, then come back when you're ready to apply these prompts in production.</span>\n",
-    "</div>\n"
+    "  <strong style=\"display:block; font-size:1.15em; margin-bottom:6px;\">☕ Time for a quick check-in?</strong>\n",
+    "  <span style=\"font-size:0.98em; line-height:1.6;\">Scroll down to track your progress before moving to advanced material.</span>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 📈 Track Your Progress\n",
+    "\n",
+    "> **💡 New to Skills Checklists?** These checkboxes help you track mastery of specific, actionable skills. Check them off when you can confidently apply each skill to your own projects.\n",
+    "\n",
+    "### Self-Assessment Questions\n",
+    "\n",
+    "After completing Module 3 core sections (3.1-3.3), ask yourself:\n",
+    "\n",
+    "1. Can I design a multi-dimensional code review template that catches security, performance, and quality issues?\n",
+    "2. Can I create parameterized prompt templates that work across different services and tech stacks?\n",
+    "3. Can I identify ambiguities in vague requirements and expand them into test specifications?\n",
+    "4. Can I structure prompts to separate unit tests from integration tests?\n",
+    "5. Can I validate and iterate on prompt templates using test scenarios?\n",
+    "6. Can I adapt AWS patterns to my team's specific SDLC workflows?\n",
+    "\n",
+    "### Progress Overview\n",
+    "\n",
+    "<div style=\"margin-bottom:12px; padding:10px; background:#fef3c7; border-left:4px solid #f59e0b; border-radius:4px; color:#78350f;\">\n",
+    "<strong>💡 Note:</strong> The status indicators below (✅/⬜) are <strong>visual guides only</strong> and cannot be clicked. Scroll down to \"<strong>Check Off Your Skills</strong>\" for the interactive checkboxes where you'll track your actual progress!\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background:#f8f9fa; border-radius:8px; padding:18px 22px; margin-bottom:18px; border:1px solid #e0e0e0; box-shadow:0 1px 4px #0001; color:#000000\">\n",
+    "\n",
+    "<span style=\"color:#000000; font-weight:600\">**Module 3 Core Skills Checklist:**</span>\n",
+    "<div style=\"margin:10px 0; font-size:0.9em; color:#666\">Track your progress by checking off skills below. Master all 6 core skills for 100% completion!</div>\n",
+    "\n",
+    "**Core Path Status:**\n",
+    "- <span style=\"color:#059669\">✅ Section 3.1 Complete (Setup & Introduction)</span>\n",
+    "- <span style=\"color:#059669\">✅ Section 3.2 Complete (Code Review Automation)</span>\n",
+    "- <span style=\"color:#059669\">✅ Section 3.3 Complete (Test Generation Automation)</span>\n",
+    "- <span style=\"color:#e97316\">⬜ Core Skills Mastery (Use Checklist Below)</span>\n",
+    "\n",
+    "**Progress Guide:**\n",
+    "- <span style=\"color:#666; font-size:0.9em\">0-2 skills checked: Beginner (17-42%)</span>\n",
+    "- <span style=\"color:#666; font-size:0.9em\">3-4 skills checked: Intermediate (58-75%)</span>\n",
+    "- <span style=\"color:#666; font-size:0.9em\">5-6 skills checked: Advanced (92-100%) 🎉</span>\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "### Check Off Your Core Skills\n",
+    "\n",
+    "<div style=\"background:#f8f9fa; border-radius:8px; padding:18px 22px; margin-bottom:18px; border:1px solid #e0e0e0; box-shadow:0 1px 4px #0001; color:#000000\">\n",
+    "\n",
+    "<span style=\"color:#000000\">Mark each skill as you master it:</span>\n",
+    "\n",
+    "<span style=\"color:#000000; font-weight:600\">**Section 3.2: Code Review Automation**</span>\n",
+    "<div style=\"margin:8px 0\">\n",
+    "- <input type=\"checkbox\" id=\"skill1\" onchange=\"this.nextSibling.style.textDecoration = this.checked ? 'line-through' : 'none'; this.nextSibling.style.color = this.checked ? '#888888' : '#000000'; this.nextSibling.style.fontWeight = this.checked ? 'normal' : '500';\"> <span style=\"color:#000000; font-weight:500\">I can design multi-dimensional code review templates (security, performance, quality)</span>\n",
+    "</div>\n",
+    "<div style=\"margin:8px 0\">\n",
+    "- <input type=\"checkbox\" id=\"skill2\" onchange=\"this.nextSibling.style.textDecoration = this.checked ? 'line-through' : 'none'; this.nextSibling.style.color = this.checked ? '#888888' : '#000000'; this.nextSibling.style.fontWeight = this.checked ? 'normal' : '500';\"> <span style=\"color:#000000; font-weight:500\">I can use parameterized templates with {{variables}} for reusable workflows</span>\n",
+    "</div>\n",
+    "\n",
+    "<span style=\"color:#000000; font-weight:600\">**Section 3.3: Test Generation Automation**</span>\n",
+    "<div style=\"margin:8px 0\">\n",
+    "- <input type=\"checkbox\" id=\"skill3\" onchange=\"this.nextSibling.style.textDecoration = this.checked ? 'line-through' : 'none'; this.nextSibling.style.color = this.checked ? '#888888' : '#000000'; this.nextSibling.style.fontWeight = this.checked ? 'normal' : '500';\"> <span style=\"color:#000000; font-weight:500\">I can identify ambiguities in requirements and generate clarifying questions</span>\n",
+    "</div>\n",
+    "<div style=\"margin:8px 0\">\n",
+    "- <input type=\"checkbox\" id=\"skill4\" onchange=\"this.nextSibling.style.textDecoration = this.checked ? 'line-through' : 'none'; this.nextSibling.style.color = this.checked ? '#888888' : '#000000'; this.nextSibling.style.fontWeight = this.checked ? 'normal' : '500';\"> <span style=\"color:#000000; font-weight:500\">I can expand requirements into comprehensive test specifications with edge cases</span>\n",
+    "</div>\n",
+    "\n",
+    "<span style=\"color:#000000; font-weight:600\">**General Application Skills**</span>\n",
+    "<div style=\"margin:8px 0\">\n",
+    "- <input type=\"checkbox\" id=\"skill5\" onchange=\"this.nextSibling.style.textDecoration = this.checked ? 'line-through' : 'none'; this.nextSibling.style.color = this.checked ? '#888888' : '#000000'; this.nextSibling.style.fontWeight = this.checked ? 'normal' : '500';\"> <span style=\"color:#000000; font-weight:500\">I can validate and iterate on prompt templates using test scenarios</span>\n",
+    "</div>\n",
+    "<div style=\"margin:8px 0\">\n",
+    "- <input type=\"checkbox\" id=\"skill6\" onchange=\"this.nextSibling.style.textDecoration = this.checked ? 'line-through' : 'none'; this.nextSibling.style.color = this.checked ? '#888888' : '#000000'; this.nextSibling.style.fontWeight = this.checked ? 'normal' : '500';\"> <span style=\"color:#000000; font-weight:500\">I can adapt industry patterns (AWS, Anthropic) to my team's SDLC workflows</span>\n",
+    "</div>\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"margin-top:16px; padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6; color:#000000\">\n",
+    "<strong>💡 Ready for Advanced Material?</strong> If you've checked off all 6 core skills and want to deepen your expertise, continue to <a href=\"./3.4-llm-as-judge-evaluation.ipynb\">Section 3.4: LLM-as-Judge Evaluation</a> to learn rubric-based evaluation and systematic testing.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "🎉 **Module 3 Core Complete!** You've learned to automate code reviews and test generation with reusable prompt templates.\n",
+    "\n",
+    "## 🎊 What You've Accomplished\n",
+    "\n",
+    "- ✅ **Built parameterized code review templates** that catch security, performance, and quality issues\n",
+    "- ✅ **Created test generation workflows** that identify ambiguities and expand edge cases\n",
+    "- ✅ **Applied Module 2 tactics** to real SDLC scenarios (role prompting, structured inputs, task decomposition)\n",
+    "- ✅ **Tested and refined templates** using automated helper functions\n",
+    "- ✅ **Adapted industry patterns** from AWS and Anthropic for your workflows\n",
+    "\n",
+    "### Next Steps\n",
+    "\n",
+    "**Option 1: Apply What You've Learned (Recommended)**\n",
+    "- Use your templates on real project code\n",
+    "- Integrate into CI/CD pipelines\n",
+    "- Share with your team and gather feedback\n",
+    "\n",
+    "**Option 2: Master Advanced Evaluation (Optional)**\n",
+    "Continue to **[Section 3.4: LLM-as-Judge Evaluation](./3.4-llm-as-judge-evaluation.ipynb)** to learn:\n",
+    "- Weighted rubric design for automated quality gates\n",
+    "- Systematic evaluation with production platforms\n",
+    "- How to scale from manual judging to automated decisions\n",
+    "\n",
+    "**Option 3: Integrate with AI Code Assistants (Module 4)**\n",
+    "Continue to **Module 4: Integration** to learn how to:\n",
+    "- Integrate your prompt templates into GitHub Copilot, OpenAI Codex, and Claude Code\n",
+    "- Build custom commands and workflows for your AI coding assistant\n",
+    "- Operationalize prompt engineering across your development team"
    ]
   }
  ],
